tests/expectations/parser/program/locator_expression_fail.out
Error [EPAR0370005]: expected '=>' -- found '='
    --> test:5:24
     |
   5 |         let a: mapping = relay.aleo::users;
     |                        ^
